--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,33 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+$sizes: map-merge(
+  (
+    10: 10%, // Adicione essa linha para o tamanho de 10%
+  ),
+  $sizes
+);
+
+// Use a classe personalizada w-10 para aplicar o width de 10%
+.w-10 {
+  width: map-get($sizes, 10);
+}
+
+$opacity: (
+  0: 0,
+  25: 0.25,
+  50: 0.5,
+  75: 0.75,
+  100: 1
+);
+
+@each $value, $opacityValue in $opacity {
+  .opacity-#{$value} {
+    opacity: $opacityValue !important;
+  }
+}
+
+.preloader {
+    display: none;
+}
