--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9268,3 +9268,11 @@ a.text-dark:hover, a.text-dark:focus {
 .preloader {
   display: none;
 }
+
+/*------- Começe aqui ----------*/
+
+/*Ramon*/
+/*Fim Ramon*/
+
+/*Lucas*/
+/*Fim Lucas*/
